# gxde-top-panel-plugins

./: README.md
debian/: changelog  control  dde-top-panel-plugins.install  gxde-top-panel-plugins.install
frame/: main.cpp
frame/item/: appitem.cpp  pluginsitem.cpp
frame/item/components/: appdragwidget.cpp
frame/util/: dockpopupwindow.cpp
frame/window/: mainwindow.cpp  mainwindow.h
interfaces/: constants.h
plugins/: CMakeLists.txt
plugins/datetime/: CMakeLists.txt
plugins/datetime-top-panel/: CMakeLists.txt  datetimewidget.cpp
plugins/dde-mpris2-plugin/: CMakeLists.txt  DDEMpris2Plugin.h
plugins/dde-sys-monitor-plugin/: CMakeLists.txt  mainwidget.h  sysmonitorplugin.cpp  sysmonitorplugin.h
plugins/disk-mount/: CMakeLists.txt
plugins/keyboard-layout/: CMakeLists.txt
plugins/network/: CMakeLists.txt
plugins/network/item/: wireditem.cpp
plugins/network/item/applet/: accesspointwidget.cpp
plugins/onboard/: CMakeLists.txt  onboarditem.cpp
plugins/overlay-warning/: CMakeLists.txt
plugins/power/: CMakeLists.txt
plugins/shutdown/: CMakeLists.txt  pluginwidget.cpp  shutdownwidget.cpp
plugins/sound/: CMakeLists.txt
plugins/trash/: CMakeLists.txt  popupcontrolwidget.cpp  trashwidget.cpp
plugins/tray/fashiontray/: fashiontraycontrolwidget.cpp  fashiontraywidgetwrapper.cpp
