
add_subdirectory("datetime")
add_subdirectory("datetime-top-panel")
#add_subdirectory("disk-mount")
add_subdirectory("dde-mpris2-plugin")
add_subdirectory("dde-sys-monitor-plugin")
add_subdirectory("network")
add_subdirectory("shutdown")
add_subdirectory("power")
add_subdirectory("sound")
add_subdirectory("tray")
add_subdirectory("trash")
add_subdirectory("keyboard-layout")
add_subdirectory("onboard")
add_subdirectory("overlay-warning")
add_subdirectory("show-desktop")
add_subdirectory("multitasking")
